--- a/package.json
+++ b/package.json
@@ -111,11 +111,11 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hello-pangea/dnd": "^16.0.0",
-    "@mui/icons-material": ">=5.10.6",
-    "@mui/material": ">=5.11.12",
-    "@mui/x-date-pickers": "^6.19.0",
+    "@mui/icons-material": "5.15.14",
+    "@mui/material": "5.15.14",
+    "@mui/x-date-pickers": "7.28.0",
     "classnames": "^2.3.2",
-    "date-fns": "^3.2.0",
+    "date-fns": "^4.1.0",
     "debounce": "^1.2.1",
     "deep-eql": "^4.1.1",
     "deepmerge": "^4.2.2",
