--- a/package.json
+++ b/package.json
@@ -127,5 +127,12 @@
     "@mui/system": ">=5.15.5",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./types/index.d.ts"
+    }
   }
 }
